# LAH5-1

./: Procfile  app.py  main.py  pwastore-c1ed2-firebase-adminsdk-s9p9l-77ba9c52d5.json  pyproject.toml  requirements.txt
BBWebFw/: FileRenderer.py  Mail.py  __init__.py  backend.py
logs/: access-log-2021-03-02.txt  access-log-2021-04-09.txt  access-log-2021-04-23.txt  access-log-2021-04-24.txt
old/: access-log-2021-02-28.txt  access-log-2021-03-01.txt  app.py  sitemap.xml  sushantshah.ml.key  temp
old/static/css/: index.css
old/static/css-small/: index.css
old/static/images/: qr_code.xml
old/templates/: base.html  index.html  projects.html
static/: manifest.json  offline.html  service-worker.js  sitemap.xml
static/.well-known/: assetlinks.json
static/css/: style-index.css  style-offline.css
static/img/: bg.jp2
static/js/: blog.js  index.js  p5.min.js
templates/: admin-panel.html  base.html  index.html
