[tool.poetry]
name = "repl_python3_beta_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
jinja2 = "^2.11.3"
parse = "^1.19.0"
webob = "^1.8.7"
brotli = "^1.0.9"
firebase-admin = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
